--- a/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/index.html
+++ b/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/index.html
@@ -12,6 +12,6 @@
 <body>
     <div class="rect">
     </div>
+    <div><button onclick="document.querySelector('.rect').classList.toggle('paused');">Paused</button></div>
 </body>
-
 </html>
