--- a/04_JavaScriptの基礎を固める/111_classを用いてコード再利用性を高めよう/start/index.html
+++ b/04_JavaScriptの基礎を固める/111_classを用いてコード再利用性を高めよう/start/index.html
@@ -15,7 +15,7 @@
         <div class="animate-title inview">
             PLAY ANIMATION
         </div>
-        <div class="animate-title-2 inview">
+        <div class="animate-title-2">
             ANIMATE STRING
         </div>
         <button onclick="document.querySelector('.animate-title').classList.toggle('inview');">Animation</button>
