--- a/04_JavaScriptの基礎を固める/116_クラス継承でコードの再利用！/start/index.html
+++ b/04_JavaScriptの基礎を固める/116_クラス継承でコードの再利用！/start/index.html
@@ -15,12 +15,9 @@
         <div class="animate-title">
             PLAY ANIMATION
         </div>
-        <div class="animate-title-2">
-            ANIMATE STRING
-        </div>
-        <button id="btn">Animation</button>
     </div>
     <script src="main.js"></script>
+    <script src="TweenMax.min.js"></script>
 </body>
 
 </html>
