--- a/05_JavaScriptを実践で使う/030_スクロール監視クラスの作成/start/index.html
+++ b/05_JavaScriptを実践で使う/030_スクロール監視クラスの作成/start/index.html
@@ -28,6 +28,7 @@
 
     </section>
     <script src="text-animation.js"></script>
+    <script src="scroll-polyfill.js"></script>
     <script src="main.js"></script>
 </body>
 
